<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.example.spaceexplorer.util.Resource" />

        <import type="com.example.spaceexplorer.util.Status" />

        <variable
            name="resource"
            type="Resource" />

        <variable
            name="callback"
            type="com.example.spaceexplorer.ui.common.RetryCallback" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        app:visibleGone="@{resource.data == null}">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:visibleGone="@{resource.status == Status.LOADING}" />

        <Button
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> callback.retry()}"
            android:text="@string/retry_btn"
            app:visibleGone="@{resource.status == Status.ERROR}" />

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{resource.message ?? @string/unknown_error}"
            app:visibleGone="@{resource.status == Status.ERROR}" />
    </LinearLayout>
</layout>

