...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/button_curiosity"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/rounded_button"
...
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_opportunity"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_button"
...
